fix typo in the doc nbs

--- a/docs/01_Building_the_Object_Table.ipynb
+++ b/docs/01_Building_the_Object_Table.ipynb
@@ -27,7 +27,7 @@
     "| (45, 60)   | (-1.25, 1.25) |\n",
     "\n",
     "\n",
-    "The Stripe 82 dataset consists of quasars/AGNs, galaxies and stars, where not all sources have been spectroscopically classified. Next, we will walk through each catagory of measurements included in the object(s) table and provide details on how they are derived. The nomenclature used here follows (as much as possible) that used in the LSST Data Products document - [LSE-163](https://github.com/lsst/LSE-163). __The units for the measurements included have also been converted to that used in the [LSE-163](https://github.com/lsst/LSE-163) document__."
+    "The Stripe 82 dataset consists of quasars/AGNs, galaxies and stars, where not all sources have been spectroscopically classified. Next, we will walk through each category of measurements included in the object(s) table and provide details on how they are derived. The nomenclature used here follows (as much as possible) that used in the LSST Data Products document - [LSE-163](https://github.com/lsst/LSE-163). __The units for the measurements included have also been converted to that used in the [LSE-163](https://github.com/lsst/LSE-163) document__."
    ]
   },
   {
@@ -40,7 +40,7 @@
     "- `psParallax`\n",
     "\n",
     "1. `ra` and `dec` are in __degrees__ (J2000)\n",
-    "2. `psPm_ra` and `psPm_dec` are proper motion measurements obtained by mathcing the objects in our sample to GAIA EDR3 and the NOIRLab Source Catalog (NSC) [DR2](https://datalab.noao.edu/nscdr2/index.php). Proper motion measurements from GAIA take the precedence when matches are found in both GAIA and NSC. \n",
+    "2. `psPm_ra` and `psPm_dec` are proper motion measurements obtained by matching the objects in our sample to GAIA EDR3 and the NOIRLab Source Catalog (NSC) [DR2](https://datalab.noao.edu/nscdr2/index.php). Proper motion measurements from GAIA take the precedence when matches are found in both GAIA and NSC. \n",
     "3. `psParallax` measurements come from GAIA EDR3."
    ]
   },
@@ -68,11 +68,11 @@
     "- `psFlux`, `psFluxErr`\n",
     "- `bdFlux`, `bdFluxErr`\n",
     "\n",
-    "    > __Note__: The LSST Data Products document listed two flux measurments for extended objects, `bdFluxB` and `bdFluxD`, from a bulge+disk fitting. In this data challenge, we only include one flux measurement for extended sources.\n",
+    "    > __Note__: The LSST Data Products document listed two flux measurements for extended objects, `bdFluxB` and `bdFluxD`, from a bulge+disk fitting. In this data challenge, we only include one flux measurement for extended sources.\n",
     "\n",
     "__A. SDSS asinh magnitude to flux:__\n",
-    "1. The convertion from asinh magnitude (SDSS) to flux (nJy) follows the procedures provided by the SDSS online documentation at [here](https://www.sdss.org/dr16/algorithms/magnitudes/#asinh) and [here](https://www.sdss.org/dr16/algorithms/fluxcal/#SDSStoAB).\n",
-    "2. The convertion from asinh magnitude error to flux error follows the formula provided by [NED](https://ned.ipac.caltech.edu/help/sdss/dr6/photometry.html), which can be derived by taking the derivative of the convertion from asinh magnitude to flux:\n",
+    "1. The conversion from asinh magnitude (SDSS) to flux (nJy) follows the procedures provided by the SDSS online documentation at [here](https://www.sdss.org/dr16/algorithms/magnitudes/#asinh) and [here](https://www.sdss.org/dr16/algorithms/fluxcal/#SDSStoAB).\n",
+    "2. The conversion from asinh magnitude error to flux error follows the formula provided by [NED](https://ned.ipac.caltech.edu/help/sdss/dr6/photometry.html), which can be derived by taking the derivative of the conversion from asinh magnitude to flux:\n",
     "\n",
     "$$\\delta f= |\\frac{-f*\\delta m/a}{tanh((-m/a)-ln(b))}|$$\n",
     "\n",
@@ -158,7 +158,15 @@
    "source": [
     "### 1.6 Photometric Redshift\n",
     "- `photoZ_pest`\n",
-    "We are filling in this column with SDSS DR16 galaxy photometric redshift (photo-z), see [here](https://www.sdss.org/dr16/algorithms/photo-z/) for more on the exact algorithm used to compute the photo-z. A matching raidus of 1 arcsec is used. "
+    "We are filling in this column with SDSS DR16 galaxy photometric redshift (photo-z), see [here](https://www.sdss.org/dr16/algorithms/photo-z/) for more on the exact algorithm used to compute the photo-z. A matching radius of 1 arcsec is used. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1.7 Flags\n",
+    "__TBD__"
    ]
   },
   {
@@ -175,9 +183,9 @@
     "| -------------- | -------------- |\n",
     "| [34.2, 37.125] | [-5.72, -3.87] |\n",
     "\n",
-    "The __XMM-LSS__ region defined above is actually part of our extended Stripe 82 area, however, because of the extensive and deep multiwavelength (e.g., X-ray, IR, radio) coverage on this region, we built a seperate table for this region and combine it with the Stripe 82 dataset in the end. \n",
+    "The __XMM-LSS__ region defined above is actually part of our extended Stripe 82 area, however, because of the extensive and deep multi-wavelength (e.g., X-ray, IR, radio) coverage on this region, we built a separate table for this region and combine it with the Stripe 82 dataset in the end. \n",
     "\n",
-    "The basically procedure for building the __XMM-LSS__ dataset is essentially the same as that used for the Stripe 82 dataset. Thus we will briefly go through the different catategory of columns and only emphasize on showing the differences. "
+    "The basically procedure for building the __XMM-LSS__ dataset is essentially the same as that used for the Stripe 82 dataset. Thus we will briefly go through the different category of columns and only emphasize on showing the differences. "
    ]
   },
   {
@@ -207,7 +215,7 @@
     "\n",
     "__-> u band:__\n",
     "\n",
-    "The __XMM-LSS__ field is coverd by the Canada-France-Hawaii Telescope Legacy Survey ([CFHTLS](https://www.cfht.hawaii.edu/Science/CFHTLS/)). We mathed our initial sample to the CFHTLS DR7 hosted on [VizieR](http://vizier.cfa.harvard.edu/viz-bin/VizieR-3?-source=II/317/cfhtls_w). We used the 3\" aperture magnitude to fill the 'psMag' column and the 'mag_auto' (Kron-like aperture) to fill the 'bdMag' column. The fluxes are computed following the standard definition of AB magnitude (see Section 1.2). \n",
+    "The __XMM-LSS__ field is coverd by the Canada-France-Hawaii Telescope Legacy Survey ([CFHTLS](https://www.cfht.hawaii.edu/Science/CFHTLS/)). We matched our initial sample to the CFHTLS DR7 hosted on [VizieR](http://vizier.cfa.harvard.edu/viz-bin/VizieR-3?-source=II/317/cfhtls_w). We used the 3\" aperture magnitude to fill the 'psMag' column and the 'mag_auto' (Kron-like aperture) to fill the 'bdMag' column. The fluxes are computed following the standard definition of AB magnitude (see Section 1.2). \n",
     "\n",
     "__-> 'grizy' bands:__\n",
     "\n",
@@ -259,19 +267,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### 2.7 Flags\n",
+    "__TBD__"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 3. The 'Object' Table\n",
     "```bash\n",
     "-> ObjectTable.parquet\n",
     "```\n",
-    "The last step is to merge the __Stripe 82__ object table and the __XMM-LSS__ object table. We did that by matching the __XMM-LSS__ source with the __Stripe 82__ sources using a 1 arcsec raidus. The Stripe 82 sources that have counterparts in the XMM-LSS sample are removed from the final merged table. "
+    "The last step is to merge the __Stripe 82__ object table and the __XMM-LSS__ object table. We did that by matching the __XMM-LSS__ source with the __Stripe 82__ sources using a 1 arcsec radius. The Stripe 82 sources that have counterparts in the XMM-LSS sample are removed from the final merged table. "
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "AGN DC",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "agndc"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -283,7 +299,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.8.6"
   }
  },
  "nbformat": 4,
