--- a/docs/02_Building_the_ForcedSource_Table.ipynb
+++ b/docs/02_Building_the_ForcedSource_Table.ipynb
@@ -8,9 +8,9 @@
     "```bash\n",
     "-> ForcedSourceTable.parquet\n",
     "```\n",
-    "The time-domain data included in this data challenge are drawn from the SDSS, so only the sources in the SDSS Stripe 82 region have correpsonding light curves.\n",
+    "The time-domain data included in this data challenge are drawn from the SDSS, so only the sources in the SDSS Stripe 82 region have corresponding light curves.\n",
     "\n",
-    "For LSST, light curves will be generated using force photometry performed at some fixed positions. The light curves included here are collected by cross matching our initial sample with the SDSS Stripe 82 multi-epoch catalog using a matching raidus of 1 arcsec.\n",
+    "For LSST, light curves will be generated using force photometry performed at some fixed positions. The light curves included here are collected by cross matching our initial sample with the SDSS Stripe 82 multi-epoch catalog using a matching radius of 1 arcsec.\n",
     "\n",
     "Similar to what we did in the [01_Building_the_Object_Table.ipynb](01_Building_the_Object_Table.ipynb) notebook, we will go through the columns included in the 'ForcedSource' table and describe how we populated those columns. "
    ]
@@ -49,7 +49,7 @@
     "#### 4. Difference Photometry\n",
     "- `psDiffFlux`, `psDiffFluxErr`\n",
     "\n",
-    "We started by picking the epoch with the median flux as the reference epoch and computed the difference flux relative to that reference epoch. The error on the difference flux was derived using standard uncertainty proporagation:\n",
+    "We started by picking the epoch with the median flux as the reference epoch and computed the difference flux relative to that reference epoch. The error on the difference flux was derived using standard uncertainty propagation:\n",
     "\n",
     "$$\\mathrm{psDiffFluxErr}_{i} = \\sqrt{\\mathrm{psFluxErr}_{i}^{2} - \\mathrm{psFluxErr}_{ref}^{2}}$$"
    ]
@@ -67,15 +67,15 @@
    "metadata": {},
    "source": [
     "#### 6. filter\n",
-    "This column won't be provided in the norminal 'ForcedSource' table either, but it can be obtained by joining with other tables."
+    "This column won't be provided in the nominal 'ForcedSource' table either, but it can be obtained by joining with other tables."
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "AGN DC",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "agndc"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -87,7 +87,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.8.6"
   }
  },
  "nbformat": 4,
