--- a/docs/03_Building_the_Source_Table.ipynb
+++ b/docs/03_Building_the_Source_Table.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "## Building the Source Table(s)\n",
     "\n",
-    "This notebook describes how the 'Source' tables are constructed, starting with the **Stripe 82** dataset and followed the **XMM-LSS** dataset. The two 'Object' tables are merged into one in the end. Much of the information listed here should be a replicate of the [01_Building_the_Object_Table.ipynb](01_Building_the_Object_Table.ipynb) notebook, thus we will reference that notebook whereever appropriate. \n",
+    "This notebook describes how the 'Source' tables are constructed, starting with the **Stripe 82** dataset and followed the **XMM-LSS** dataset. The two 'Object' tables are merged into one in the end. Much of the information listed here should be a replicate of the [01_Building_the_Object_Table.ipynb](01_Building_the_Object_Table.ipynb) notebook, thus we will reference that notebook wherever appropriate. \n",
     "\n",
     "__Note:__ This table is different than the 'Forced Sources' table, we provide at most one photometry (in each band) for every source."
    ]
@@ -35,7 +35,7 @@
    "metadata": {},
    "source": [
     "### 1.2 Astrometry\n",
-    "- `ra`, `dec`: The positon of the mathced photometry. For Stripe 82, they are SDSS DR16 positions. "
+    "- `ra`, `dec`: The position of the matched photometry. For Stripe 82, they are SDSS DR16 positions. "
    ]
   },
   {
@@ -75,7 +75,7 @@
    "metadata": {},
    "source": [
     "### 1.6 filter\n",
-    "This column won't be provided in the norminal 'Source' table either, but it can be obtained by joining with other tables."
+    "This column won't be provided in the nominal 'Source' table either, but it can be obtained by joining with other tables."
    ]
   },
   {
@@ -102,7 +102,7 @@
    "metadata": {},
    "source": [
     "### 2.2 Astrometry\n",
-    "- `ra`, `dec`: The positon of the mathced photometry. \n",
+    "- `ra`, `dec`: The position of the matched photometry. \n",
     "\n",
     "For u band photometry, they are SDSS DR16 positions; for photometry in 'grizy' band, they are DES DR2 positions."
    ]
@@ -148,7 +148,7 @@
    "metadata": {},
    "source": [
     "### 2.6 filter\n",
-    "This column won't be provided in the norminal 'Source' table either, but it can be obtained by joining with other tables."
+    "This column won't be provided in the nominal 'Source' table either, but it can be obtained by joining with other tables."
    ]
   },
   {
@@ -159,15 +159,15 @@
     "```bash\n",
     "-> SourceTable.parquet\n",
     "```\n",
-    "The last step is to merge the __Stripe 82__ Source table and the __XMM-LSS__ Source table. We did that by matching the __XMM-LSS__ source with the __Stripe 82__ sources using a 1 arcsec raidus. The Stripe 82 sources that have counterparts in the XMM-LSS sample were removed from the final merged table. "
+    "The last step is to merge the __Stripe 82__ Source table and the __XMM-LSS__ Source table. We did that by matching the __XMM-LSS__ source with the __Stripe 82__ sources using a 1 arcsec radius. The Stripe 82 sources that have counterparts in the XMM-LSS sample were removed from the final merged table. "
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "AGN DC",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "agndc"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -179,7 +179,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.8.6"
   }
  },
  "nbformat": 4,
