--- a/docs/04_LC_features.ipynb
+++ b/docs/04_LC_features.ipynb
@@ -26,7 +26,7 @@
     "Four best-fit CARMA(2,1)/DHO parameters.\n",
     "\n",
     "- #### 4 - 32\n",
-    "Generalized Lomb Scargle fit/parameters as described in the __R11__ papaer. The exact mathcing from index to features is given below. Note that first relative phase ('rel_phase_0') are not included since it is mostly just zero. \n",
+    "Generalized Lomb Scargle fit/parameters as described in the __R11__ papaer. The exact matching from index to features is given below. Note that first relative phase ('rel_phase_0') are not included since it is mostly just zero. \n",
     "\n",
     ">    4: freq1_harmonics_amplitude_0\\\n",
     "    5: freq1_harmonics_amplitude_1\\\n",
@@ -154,9 +154,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "AGN DC",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "agndc"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -168,7 +168,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.8.6"
   }
  },
  "nbformat": 4,
