--- a/getting_started/ReadTables.ipynb
+++ b/getting_started/ReadTables.ipynb
@@ -39,8 +39,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1. Read the 'Object' table\n",
-    "__Note:__ The acutall 'class' is remained in the current version, which will be removed in the final release."
+    "### 1. Read the 'Object' table"
    ]
   },
   {
@@ -3259,9 +3258,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "AGN DC",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "agndc"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -3273,7 +3272,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.8.6"
   }
  },
  "nbformat": 4,
