--- a/docs/01_Building_the_Object_Table.ipynb
+++ b/docs/01_Building_the_Object_Table.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "## Building the Object Table(s)\n",
     "\n",
-    "This notebook describes how the 'Object' tables are constructed, starting with the **Stripe 82** dataset and followed the **XMM-LSS** dataset. The two 'Object' tables are merged into one in the end."
+    "This notebook describes how the `Object` tables are constructed, starting with the **Stripe 82** dataset and followed the **XMM-LSS** dataset. The two `Object` tables are merged into one in the end."
    ]
   },
   {
@@ -279,15 +279,15 @@
     "```bash\n",
     "-> ObjectTable.parquet\n",
     "```\n",
-    "The last step is to merge the __Stripe 82__ object table and the __XMM-LSS__ object table. We did that by matching the __XMM-LSS__ source with the __Stripe 82__ sources using a 1 arcsec radius. The Stripe 82 sources that have counterparts in the XMM-LSS sample are removed from the final merged table. "
+    "The last step is to merge the __Stripe 82__ object table and the __XMM-LSS__ object table. We did that by matching the __XMM-LSS__ objects with the __Stripe 82__ objects using a 0.5 arcsec radius. The Stripe 82 objects that have counterparts in the XMM-LSS sample are re-assigned the objectId using that from their counterparts in the XMM-LSS sample. "
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "AGN DC",
    "language": "python",
-   "name": "python3"
+   "name": "agndc"
   },
   "language_info": {
    "codemirror_mode": {
@@ -299,7 +299,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.9.5"
   }
  },
  "nbformat": 4,
