--- a/docs/03_Building_the_Source_Table.ipynb
+++ b/docs/03_Building_the_Source_Table.ipynb
@@ -6,9 +6,9 @@
    "source": [
     "## Building the Source Table(s)\n",
     "\n",
-    "This notebook describes how the 'Source' tables are constructed, starting with the **Stripe 82** dataset and followed the **XMM-LSS** dataset. The two 'Object' tables are merged into one in the end. Much of the information listed here should be a replicate of the [01_Building_the_Object_Table.ipynb](01_Building_the_Object_Table.ipynb) notebook, thus we will reference that notebook wherever appropriate. \n",
+    "This notebook describes how the `Source` tables are constructed, starting with the **Stripe 82** dataset and followed the **XMM-LSS** dataset. The two `Source` tables are merged into one in the end. Much of the information listed here should be a replicate of the [01_Building_the_Object_Table.ipynb](01_Building_the_Object_Table.ipynb) notebook, thus we will reference that notebook wherever appropriate. \n",
     "\n",
-    "__Note:__ This table is different than the 'Forced Sources' table, we provide at most one photometry (in each band) for every source."
+    "__Note:__ This table is different than the 'ForcedSource' table, which is the place to get the light curves. Here, we provide at most one photometry (in each band) for every object."
    ]
   },
   {
@@ -159,15 +159,15 @@
     "```bash\n",
     "-> SourceTable.parquet\n",
     "```\n",
-    "The last step is to merge the __Stripe 82__ Source table and the __XMM-LSS__ Source table. We did that by matching the __XMM-LSS__ source with the __Stripe 82__ sources using a 1 arcsec radius. The Stripe 82 sources that have counterparts in the XMM-LSS sample were removed from the final merged table. "
+    "The last step is to merge the __Stripe 82__ source table and the __XMM-LSS__ source table. We did that by matching the __XMM-LSS__ objects with the __Stripe 82__ objects using a 0.5 arcsec radius. The Stripe 82 sources that have counterparts in the XMM-LSS sample are re-assigned the objectId using that from their counterparts in the XMM-LSS sample. "
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "AGN DC",
    "language": "python",
-   "name": "python3"
+   "name": "agndc"
   },
   "language_info": {
    "codemirror_mode": {
@@ -179,7 +179,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.9.5"
   }
  },
  "nbformat": 4,
