add section for spec z

--- a/docs/01_Building_the_Object_Table.ipynb
+++ b/docs/01_Building_the_Object_Table.ipynb
@@ -156,7 +156,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1.6 Photometric Redshift\n",
+    "### 1.6 Redshift\n",
+    "- `z`\n",
+    "Spectroscopic redshift if mathced to a SDSS spectrum within 1 arcsec of the source position.\n",
+    "\n",
     "- `photoZ_pest`\n",
     "We are filling in this column with SDSS DR16 galaxy photometric redshift (photo-z), see [here](https://www.sdss.org/dr16/algorithms/photo-z/) for more on the exact algorithm used to compute the photo-z. A matching radius of 1 arcsec is used. "
    ]
@@ -258,7 +261,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2.6 Photo-z\n",
+    "### 2.6 \n",
+    "#### Spec-z (`z`)\n",
+    "- For AGNs in this region, spec_z are provided by the XMM-SERVS team as documented in the [paper](https://academic.oup.com/mnras/article-abstract/478/2/2132/4985846?redirectedFrom=fulltext). We updated the spec_z for ~ 100 source that have new SDSS DR16 spectra. \n",
+    "- For other source, we matched them to the SDSS DR16 spectra catalog (see Section 1.6).\n",
+    "\n",
+    "#### Photo-z ('photoZ_pest`)\n",
     "- For AGNs in this region, the photo-z are provided by the XMM-SERVS team as documented in the [paper](https://academic.oup.com/mnras/article-abstract/478/2/2132/4985846?redirectedFrom=fulltext). \n",
     "- For other source, we matched them to the SDSS DR16 photo-z catalog (see Section 1.6)."
    ]
