add description about the flags column

--- a/docs/01_Building_the_Object_Table.ipynb
+++ b/docs/01_Building_the_Object_Table.ipynb
@@ -169,7 +169,10 @@
    "metadata": {},
    "source": [
     "### 1.7 Flags\n",
-    "__TBD__"
+    "- SDSS ('ugriz' bands): 0 if match is found and used.\n",
+    "- DES ('grizy' bands): 0 if DES photometry flag <= 3 (as recommended)\n",
+    "\n",
+    "__Note:__ Since a series of cuts were already applied while obtaining the SDSS photometry (see [here](https://www.sdss.org/dr16/tutorials/flags/) for the exact cuts used), thus we presume that SDSS photometries are already 'clean'. "
    ]
   },
   {
@@ -276,7 +279,10 @@
    "metadata": {},
    "source": [
     "### 2.7 Flags\n",
-    "__TBD__"
+    "#### -> 'u' band\n",
+    "Set to 0 if a matched is found. Since our preprocessing steps only selected sources in the catalog that have a Sextractor flag of either 0 or 2 (issue free or blended), so we presume the u-band photometry is 'clean'\n",
+    "#### -> 'grizy' bands: \n",
+    "The LSST pipeline outputs a flag for each measurement. In our case, in each band/filter, we get one flag for the point-source flux measurement (`psFlux`), one flag for the extended-source flux measurement (`bdFlux`) and one flag for the `extendedness` measurement. We set the `flags` column for each band/filter to be 0 if all three flags mentioned above are 0, otherwise we set it to 1."
    ]
   },
   {
