--- a/docs/03_Building_the_Source_Table.ipynb
+++ b/docs/03_Building_the_Source_Table.ipynb
@@ -67,7 +67,10 @@
    "metadata": {},
    "source": [
     "### 1.5 flags\n",
-    "TBD"
+    "Only SDSS photometries are used for the Stripe 82 source table, thus, we set the `flags` column to 0 if a match is found for a particular object, otherwise NaN.\n",
+    "\n",
+    "__Note:__ \n",
+    "Since a series of cuts were already applied while obtaining the SDSS photometry (see [here](https://www.sdss.org/dr16/tutorials/flags/) for the exact cuts used), thus we presume that SDSS photometries are already 'clean'. "
    ]
   },
   {
@@ -140,7 +143,10 @@
    "metadata": {},
    "source": [
     "### 2.5 flags\n",
-    "TBD"
+    "- SDSS ('ugriz' bands): 0 if match is found and used.\n",
+    "- DES ('grizy' bands): 0 if DES photometry flag <= 3 (as recommended)\n",
+    "\n",
+    "__Note:__ Since a series of cuts were already applied while obtaining the SDSS photometry (see [here](https://www.sdss.org/dr16/tutorials/flags/) for the exact cuts used), thus we presume that SDSS photometries are already 'clean'. "
    ]
   },
   {
