update build source table

--- a/docs/03_Building_the_Source_Table.ipynb
+++ b/docs/03_Building_the_Source_Table.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "This notebook describes how the `Source` tables are constructed, starting with the **Stripe 82** dataset and followed the **XMM-LSS** dataset. The two `Source` tables are merged into one in the end. Much of the information listed here should be a replicate of the [01_Building_the_Object_Table.ipynb](01_Building_the_Object_Table.ipynb) notebook, thus we will reference that notebook wherever appropriate. \n",
     "\n",
-    "__Note:__ This table is different than the 'ForcedSource' table, which is the place to get the light curves. Here, we provide at most one photometry (in each band) for every object."
+    "__Note:__ This table is different than the 'ForcedSource' table, which is the place to get the light curves. Here, we provide at most one photometry (in each band) for every object, except in the XMM-LSS region where both DES and SDSS photometries are available."
    ]
   },
   {
