--- a/docs/04_LC_features.ipynb
+++ b/docs/04_LC_features.ipynb
@@ -23,7 +23,7 @@
    "metadata": {},
    "source": [
     "- #### 0 - 3\n",
-    "Four best-fit CARMA(2,1)/DHO parameters.\n",
+    "Four best-fit CARMA(2,1)/DHO parameters, $\\alpha_{1}$, $\\alpha_{2}$, $\\beta_{0}$ and $\\beta_{1}$. The fitting was performed in flux.\n",
     "\n",
     "- #### 4 - 32\n",
     "Generalized Lomb Scargle fit/parameters as described in the __R11__ papaer. The exact matching from index to features is given below. Note that first relative phase ('rel_phase_0') are not included since it is mostly just zero. \n",
@@ -154,9 +154,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "AGN DC",
    "language": "python",
-   "name": "python3"
+   "name": "agndc"
   },
   "language_info": {
    "codemirror_mode": {
@@ -168,7 +168,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.9.5"
   }
  },
  "nbformat": 4,
