update the building tables nb

--- a/docs/01_Building_the_Object_Table.ipynb
+++ b/docs/01_Building_the_Object_Table.ipynb
@@ -27,14 +27,28 @@
     "| (45, 60)   | (-1.25, 1.25) |\n",
     "\n",
     "\n",
-    "The Stripe 82 dataset consists of quasars/AGNs, galaxies and stars, where not all sources have been spectroscopically classified. Next, we will walk through each category of measurements included in the object(s) table and provide details on how they are derived. The nomenclature used here follows (as much as possible) that used in the LSST Data Products document - [LSE-163](https://github.com/lsst/LSE-163). __The units for the measurements included have also been converted to that used in the [LSE-163](https://github.com/lsst/LSE-163) document__."
+    "The Stripe 82 dataset consists of quasars/AGNs, galaxies and stars, where not all sources have been spectroscopically classified. Next, we will walk through each category of measurements included in the object(s) table and provide details on how they are derived. The nomenclature used here follows (as much as possible) that used in the LSST Data Products document - [LSE-163](https://github.com/lsst/LSE-163). __The units for the measurements included have also been converted to that used in the [LSE-163](https://github.com/lsst/LSE-163) document__.\n",
+    "\n",
+    "#### **_Data Sources:_**\n",
+    "- __Astrometry__: Gaia, NOIRLab Source Catalog ([NSC](https://datalab.noao.edu/nscdr2/index.php))\n",
+    "- __Optical Photometry__: DES DR2, SDSS\n",
+    "- __Light Curves__: SDSS\n",
+    "- __Redshift__: SDSS"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1.1 Astrometry\n",
+    "### 1.1 IDs\n",
+    "- `objectID`: Unique object identifier, index in the provided table. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1.2 Astrometry\n",
     "- `ra`, `dec`\n",
     "- `psPm_ra`, `psPm_dec`\n",
     "- `psParallax`\n",
@@ -48,7 +62,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1.2 Photometry\n",
+    "### 1.3 Photometry\n",
     "- `psMag`, `psMagErr`\n",
     "- `bdMag`, `bdMagErr`\n",
     "\n",
@@ -94,7 +108,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1.3 Extendedness (morphology)\n",
+    "### 1.4 Extendedness (morphology)\n",
     "- `extendedness`\n",
     "\n",
     "    Per the LSST Data Products document, 'A measure of extendedness, computed using a combination of available moments, or from a likelihood ratio of point/B+D source models (exact algorithm TBD). `extendedness` = 1 implies a high degree of confidence that the source is extended. `extendedness` = 0 implies a high degree of confidence that the source is point-like.'\n",
@@ -112,7 +126,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1.4 Standard Color and Error\n",
+    "### 1.5 Standard Color and Error\n",
     "- `stdColor`\n",
     "\n",
     "    The standard colors, u-g, g-r, r-i, i-z, z-y, are derived by first computing the ratios of the fluxes from different bands and take the log of the ratios:\n",
@@ -145,7 +159,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1.5 lcPeriodic & lcNonPeriodic\n",
+    "### 1.6 lcPeriodic & lcNonPeriodic\n",
     "- `lcPeriodic`\n",
     "- `lcNonPeriodic`\n",
     "\n",
@@ -156,7 +170,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1.6 Redshift\n",
+    "### 1.7 Redshift\n",
     "- `z`\n",
     "Spectroscopic redshift if mathced to a SDSS spectrum within 1 arcsec of the source position.\n",
     "\n",
@@ -168,7 +182,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1.7 Flags\n",
+    "### 1.8 Flags\n",
     "- SDSS ('ugriz' bands): 0 if match is found and used.\n",
     "- DES ('grizy' bands): 0 if DES photometry flag <= 3 (as recommended)\n",
     "\n",
@@ -191,22 +205,35 @@
     "\n",
     "The __XMM-LSS__ region defined above is actually part of our extended Stripe 82 area, however, because of the extensive and deep multi-wavelength (e.g., X-ray, IR, radio) coverage on this region, we built a separate table for this region and combine it with the Stripe 82 dataset in the end. \n",
     "\n",
-    "The basically procedure for building the __XMM-LSS__ dataset is essentially the same as that used for the Stripe 82 dataset. Thus we will briefly go through the different category of columns and only emphasize on showing the differences. "
+    "The basically procedure for building the __XMM-LSS__ dataset is essentially the same as that used for the Stripe 82 dataset. Thus we will briefly go through the different category of columns and only emphasize on showing the differences. \n",
+    "\n",
+    "#### **_Data Sources:_**\n",
+    "- __Astrometry__: Gaia, NOIRLab Source Catalog ([NSC](https://datalab.noao.edu/nscdr2/index.php))\n",
+    "- __Optical Photometry__: CFHTLS, HSC, DES DR2\n",
+    "- __Redshift__: SDSS, [XMM-SERVS](https://academic.oup.com/mnras/article-abstract/478/2/2132/4985846?redirectedFrom=fulltext)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2.1 Astrometry\n",
-    "See Section 1.1."
+    "### 2.1 IDs\n",
+    "- `objectID`: Unique object identifier, index in the provided table. "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2.2 Photometry"
+    "### 2.2 Astrometry\n",
+    "See Section 1.2."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.3 Photometry"
    ]
   },
   {
@@ -221,7 +248,7 @@
     "\n",
     "__-> u band:__\n",
     "\n",
-    "The __XMM-LSS__ field is coverd by the Canada-France-Hawaii Telescope Legacy Survey ([CFHTLS](https://www.cfht.hawaii.edu/Science/CFHTLS/)). We matched our initial sample to the CFHTLS DR7 hosted on [VizieR](http://vizier.cfa.harvard.edu/viz-bin/VizieR-3?-source=II/317/cfhtls_w). We used the 3\" aperture magnitude to fill the 'psMag' column and the 'mag_auto' (Kron-like aperture) to fill the 'bdMag' column. The fluxes are computed following the standard definition of AB magnitude (see Section 1.2). \n",
+    "The __XMM-LSS__ field is coverd by the Canada-France-Hawaii Telescope Legacy Survey ([CFHTLS](https://www.cfht.hawaii.edu/Science/CFHTLS/)). We matched our initial sample to the CFHTLS DR7 hosted on [VizieR](http://vizier.cfa.harvard.edu/viz-bin/VizieR-3?-source=II/317/cfhtls_w). We used the 3\" aperture magnitude to fill the 'psMag' column and the 'mag_auto' (Kron-like aperture) to fill the 'bdMag' column. The fluxes are computed following the standard definition of AB magnitude (see Section 1.3). \n",
     "\n",
     "__-> 'grizy' bands:__\n",
     "\n",
@@ -232,12 +259,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2.3 Extendedness (morphology)\n",
+    "### 2.4 Extendedness (morphology)\n",
     "- `extendedness`\n",
     "\n",
     "__-> u band:__\n",
     "\n",
-    "Filled by the 'class_star' measurement from the CFHTLS catalog, inverted following the instruction given in Section 1.3 before populating.\n",
+    "Filled by the 'class_star' measurement from the CFHTLS catalog, inverted following the instruction given in Section 1.4 before populating.\n",
     "\n",
     "__-> 'grizy' bands:__\n",
     "\n",
@@ -248,15 +275,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2.4 Standard Color and Error\n",
-    "See Section 1.4."
+    "### 2.5 Standard Color and Error\n",
+    "See Section 1.5."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2.5 lcPeriodic & lcNonPeriodic\n",
+    "### 2.6 lcPeriodic & lcNonPeriodic\n",
     "Not public time-domain data found in this area, which can match the depths of HSC, thus N/A."
    ]
   },
@@ -264,21 +291,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2.6 \n",
+    "### 2.7 \n",
     "#### Spec-z (`z`)\n",
     "- For AGNs in this region, spec_z are provided by the XMM-SERVS team as documented in the [paper](https://academic.oup.com/mnras/article-abstract/478/2/2132/4985846?redirectedFrom=fulltext). We updated the spec_z for ~ 100 source that have new SDSS DR16 spectra. \n",
-    "- For other source, we matched them to the SDSS DR16 spectra catalog (see Section 1.6).\n",
+    "- For other source, we matched them to the SDSS DR16 spectra catalog (see Section 1.7).\n",
     "\n",
     "#### Photo-z ('photoZ_pest`)\n",
     "- For AGNs in this region, the photo-z are provided by the XMM-SERVS team as documented in the [paper](https://academic.oup.com/mnras/article-abstract/478/2/2132/4985846?redirectedFrom=fulltext). \n",
-    "- For other source, we matched them to the SDSS DR16 photo-z catalog (see Section 1.6)."
+    "- For other source, we matched them to the SDSS DR16 photo-z catalog (see Section 1.7)."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2.7 Flags\n",
+    "### 2.8 Flags\n",
     "#### -> 'u' band\n",
     "Set to 0 if a matched is found. Since our preprocessing steps only selected sources in the catalog that have a Sextractor flag of either 0 or 2 (issue free or blended), so we presume the u-band photometry is 'clean'\n",
     "#### -> 'grizy' bands: \n",
