--- a/docs/03_Building_the_Source_Table.ipynb
+++ b/docs/03_Building_the_Source_Table.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "## Building the Source Table(s)\n",
     "\n",
-    "This notebook describes how the `Source` tables are constructed, starting with the **Stripe 82** dataset and followed the **XMM-LSS** dataset. The two `Source` tables are merged into one in the end. Much of the information listed here should be a replicate of the [01_Building_the_Object_Table.ipynb](01_Building_the_Object_Table.ipynb) notebook, thus we will reference that notebook wherever appropriate. \n",
+    "This notebook describes how the `Source` tables are constructed, starting with the **Stripe 82** dataset and followed the **XMM-LSS** dataset. The two `Source` tables are merged into one in the end. Much of the information listed here should just be repeating similiar content in the [01_Building_the_Object_Table.ipynb](01_Building_the_Object_Table.ipynb) notebook, thus we will reference that notebook wherever appropriate. \n",
     "\n",
     "__Note:__ This table is different than the 'ForcedSource' table, which is the place to get the light curves. Here, we provide at most one photometry (in each band) for every object, except in the XMM-LSS region where both DES and SDSS photometries are available."
    ]
@@ -26,7 +26,7 @@
    "metadata": {},
    "source": [
     "### 1.1 IDs\n",
-    "- `sourceId`: Unique source identifier\n",
+    "- `sourceId`: Unique source identifier, index in the provided table. \n",
     "- `objectId`: ID of the Object this source was associated with, if any."
    ]
   },
@@ -51,7 +51,7 @@
     "- `psFlux`, `psFluxErr`\n",
     "- `bdFlux`, `bdFluxErr`\n",
     "\n",
-    "The fluxes are converted from asinh magnitudes following the procedure described in Section 1.2 of the [01_Building_the_Object_Table.ipynb](01_Building_the_Object_Table.ipynb) notebook."
+    "The fluxes are converted from asinh magnitudes following the procedure described in Section 1.3 of the [01_Building_the_Object_Table.ipynb](01_Building_the_Object_Table.ipynb) notebook."
    ]
   },
   {
@@ -96,7 +96,7 @@
    "metadata": {},
    "source": [
     "### 2.1 IDs\n",
-    "- `sourceId`: Unique source identifier\n",
+    "- `sourceId`: Unique source identifier, index in the provided table. \n",
     "- `objectId`: ID of the Object this source was associated with, if any."
    ]
   },
@@ -127,7 +127,7 @@
     "- `psFlux`, `psFluxErr`\n",
     "- `bdFlux`, `bdFluxErr`\n",
     "\n",
-    "The fluxes are converted from asinh magnitudes (or AB magnitudes) following the procedure described in Section 1.2 of the [01_Building_the_Object_Table.ipynb](01_Building_the_Object_Table.ipynb) notebook."
+    "The fluxes are converted from asinh magnitudes (or AB magnitudes) following the procedure described in Section 1.3 of the [01_Building_the_Object_Table.ipynb](01_Building_the_Object_Table.ipynb) notebook."
    ]
   },
   {
