--- a/docs/02_Building_the_ForcedSource_Table.ipynb
+++ b/docs/02_Building_the_ForcedSource_Table.ipynb
@@ -39,7 +39,7 @@
     "- `psMag`, `psMagErr`\n",
     "- `psFlux`, `psFluxErr`\n",
     "\n",
-    "The magnitudes are simply the SDSS asinh magnitudes. The fluxes are derived using the procedure introduced in Section 1.2 of the [01_Building_the_Object_Table.ipynb](01_Building_the_Object_Table.ipynb) notebook."
+    "The magnitudes are simply the SDSS asinh magnitudes. The fluxes are derived using the procedure introduced in Section 1.3 of the [01_Building_the_Object_Table.ipynb](01_Building_the_Object_Table.ipynb) notebook."
    ]
   },
   {
@@ -73,9 +73,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "AGN DC",
    "language": "python",
-   "name": "python3"
+   "name": "agndc"
   },
   "language_info": {
    "codemirror_mode": {
@@ -87,7 +87,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.9.5"
   }
  },
  "nbformat": 4,
