fixed typos & update about.md

--- a/docs/05_Building_the_Multiwavelength _Table.ipynb
+++ b/docs/05_Building_the_Multiwavelength _Table.ipynb
@@ -33,7 +33,7 @@
     "#### 1.1 Multiwavelength Data Included\n",
     "- __UV__: GALEX\n",
     "- __NIR__: UKIDSS\n",
-    "- __MIR__: Spitzer (SpIES)"
+    "- __MIR__: Spitzer ([SpIES](https://iopscience.iop.org/article/10.3847/0067-0049/225/1/1))"
    ]
   },
   {
@@ -106,7 +106,7 @@
    "metadata": {},
    "source": [
     "### 2. XMM-LSS\n",
-    "In this region, the source positions for AGNs/QSOs are retrived from the XMM-SERVS catalog, where likelihood-based cross-matching between X-ray sources and optical/IR catalogs were performed. We used the optical/IR positions they reported as our source positions for cross-matching with other multiwavelength catalogs."
+    "In this region, the source positions for AGNs/QSOs are retrieved from the [XMM-SERVS](https://academic.oup.com/mnras/article-abstract/478/2/2132/4985846?redirectedFrom=fulltext) catalog, where likelihood-based cross-matching between X-ray sources and optical/IR catalogs were performed. We used the optical/IR positions they reported as our source positions for cross-matching with other multiwavelength catalogs."
    ]
   },
   {
@@ -194,9 +194,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "AGN DC",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "agndc"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -208,7 +208,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.8.6"
   }
  },
  "nbformat": 4,
