--- a/docs/05_Building_the_Multiwavelength _Table.ipynb
+++ b/docs/05_Building_the_Multiwavelength _Table.ipynb
@@ -33,7 +33,9 @@
     "#### 1.1 Multiwavelength Data Included\n",
     "- __UV__: GALEX\n",
     "- __NIR__: UKIDSS\n",
-    "- __MIR__: Spitzer ([SpIES](https://iopscience.iop.org/article/10.3847/0067-0049/225/1/1))"
+    "- __MIR__: Spitzer ([SpIES](https://iopscience.iop.org/article/10.3847/0067-0049/225/1/1))\n",
+    "- __FIR__: Herschel ([HELP](https://herschel.sussex.ac.uk))\n",
+    "- __Radio__: FIRST"
    ]
   },
   {
@@ -42,11 +44,15 @@
    "source": [
     "#### 1.2 Matching Radius (arcsec)\n",
     "\n",
-    "|        |      QSOs | HighZ QSOs |      Galaxies |      Stars |\n",
-    "| ------ | --------- | ---------- | ------------- | ---------- |\n",
-    "| GALEX  | 5         | 5          | 5             | 5          |\n",
-    "| UKIDSS | 1         | 2          | 1             | 1          |\n",
-    "| Spitzer| 1         | 2          | 1             | 1          |"
+    "|          |      QSOs | HighZ QSOs |      Galaxies |      Stars |\n",
+    "| ------   | --------- | ---------- | ------------- | ---------- |\n",
+    "| GALEX    | 5         | 5          | 5             | 5          |\n",
+    "| UKIDSS   | 1         | 2          | 1             | 1          |\n",
+    "| Spitzer  | 1         | 2          | 1             | 1          |\n",
+    "| Herschel | 1         | 2          | 1             | 1          |\n",
+    "| FIRST    | 5         | 5          | 5             | 5          |\n",
+    "\n",
+    "__Note:__ XID+ positions were used for Herschel (HELP) cross-matching"
    ]
   },
   {
@@ -58,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -72,12 +78,12 @@
        " 'nuv_mag': 'GALEX NUV magnitude (AB)',\n",
        " 'nuv_magerr': 'GALEX NUV magnitude error',\n",
        " 'spies_id': 'Unique ID assigned to each source in the two channel SpIES catalog',\n",
-       " 'flux_aper_2_ch1': 'SpIES 3.6 microns flux (microjansky) extracted using a 1.9 arcsec aperature',\n",
+       " 'flux_aper_2_ch1': 'SpIES 3.6 microns flux (microjansky) extracted using a 1.9 arcsec aperture',\n",
        " 'fluxerr_aper_2_ch1': \"Error in 'flux_aper_2_ch1'\",\n",
        " 'flux_auto_ch1': 'SpIES 3.6 microns flux value (microjansky) automatically extracted using SExtractor',\n",
        " 'fluxerr_auto_ch1': \"Error in 'flux_auto_ch1'\",\n",
        " 'class_star_ch1': 'SpIES 3.6 micrometer morphology classification, > 0.5 for resolved source',\n",
-       " 'flux_aper_2_ch2': 'SpIES 4.5 microns flux (microjansky) extracted using a 1.9 arcsec aperature',\n",
+       " 'flux_aper_2_ch2': 'SpIES 4.5 microns flux (microjansky) extracted using a 1.9 arcsec aperture',\n",
        " 'fluxerr_aper_2_ch2': \"Error in 'flux_aper_2_ch2'\",\n",
        " 'flux_auto_ch2': 'SpIES 4.5 micrometer flux value (microjansky) automatically extracted using SExtractor',\n",
        " 'fluxerr_auto_ch2': \"Error in 'flux_auto_ch2'\",\n",
@@ -89,10 +95,23 @@
        " 'ukidss_pgalaxy': 'Probability that the source is extended',\n",
        " 'a{band}': 'Galactic extinction correction in Y, J H, K',\n",
        " '{band}_apermag3': 'Default point source aperture mag (AB) in Y, J H, K',\n",
-       " '{band}_apermag3err': 'Error in the associated Y, J H, K magnitude'}"
+       " '{band}_apermag3err': 'Error in the associated Y, J H, K magnitude',\n",
+       " 'help_id': 'Unique ID of the Herschel Extragalactic Legacy Project (HELP)',\n",
+       " 'src2help': 'Distance from source to the Herschel/HELP match (arcsec)',\n",
+       " 'f_spire_{wavelength}': 'Herschel SPIRE flux density (microjansky) at wavelength of 250 mircrons, 350 mircrons or 500 microns',\n",
+       " 'ferr_spire_{wavelength}_u': 'Flux density (84th percentile), in microjansky, at wavelength of 250 mircrons, 350 mircrons or 500 microns',\n",
+       " 'ferr_spire_{wavelength}_l': 'Flux density (16th percentile), in microjansky, at wavelength of 250 mircrons, 350 mircrons or 500 microns',\n",
+       " 'src2first': 'Distance from source to the FIRST match (arcsec)',\n",
+       " 'sideprob': 'Probability that the mathced FIRST source is spurious',\n",
+       " 'fpeak(int)': 'FIRST peak(integrated) flux density (mJy)',\n",
+       " 'rms': 'FIRST local noise estimate at the source position (mJy)',\n",
+       " 'major(minor)': 'FIRST major(minor) axis (arcsec)',\n",
+       " 'posang': 'FIRST position angle in arcsec',\n",
+       " 'fitted_major(minor)': 'FIRST fitted major(minor) axis (arcsec)',\n",
+       " 'fitted_posang': 'FIRST fitted position angle in arcsec'}"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -117,7 +136,8 @@
     "- __X-ray__: XMM-Newton (XMM-SERVS); QSOs/AGNs only.\n",
     "- __UV__: GALEX\n",
     "- __NIR__: VISTA/VIDEO\n",
-    "- __MIR__: Spitzer (DeepDrill)"
+    "- __MIR__: Spitzer (DeepDrill)\n",
+    "- __FIR__: Herschel ([HELP](https://herschel.sussex.ac.uk))"
    ]
   },
   {
@@ -126,11 +146,14 @@
    "source": [
     "#### 2.2 Matching Radius\n",
     "\n",
-    "|        | QSOs/AGNs | HighZ QSOs |      Galaxies |      Stars |\n",
-    "| ------ | --------- | ---------- | ------------- | ---------- |\n",
-    "| GALEX  | 5         | 5          | 5             | 5          |\n",
-    "| VISTA  | 1         | 2          | 1             | 1          |\n",
-    "| Spitzer| 1         | 2          | 1             | 1          |"
+    "|          | QSOs/AGNs  |      Galaxies |      Stars |\n",
+    "| ------   | ---------  | ------------- | ---------- |\n",
+    "| GALEX    | 5          | 5             | 5          |\n",
+    "| VISTA    | 1          | 1             | 1          |\n",
+    "| Spitzer  | 1          | 1             | 1          |\n",
+    "| Herschel | 1          | 1             | 1          |\n",
+    "\n",
+    "__Note:__ XID+ positions were used for Herschel (HELP) cross-matching"
    ]
   },
   {
@@ -142,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -169,20 +192,26 @@
        " 'vista_{band}_m_base_classificationextendedness_value': 'VISTA morphology measurement in J, H and Ks bands',\n",
        " 'vista_{band}_m_base_classificationextendedness_flag': 'Flag for the corresponding morphology measurement',\n",
        " 'dd_id': 'Unique ID assigned to each source in the two channel SpIES catalog',\n",
-       " 'flux_aper_2_3p6': 'SpIES 3.6 microns flux (microjansky) extracted using a 1.9 arcsec aperature',\n",
+       " 'flux_aper_2_3p6': 'SpIES 3.6 microns flux (microjansky) extracted using a 1.9 arcsec aperture',\n",
        " 'fluxerr_aper_2_3p6': \"Error in 'flux_aper_2_3p6'\",\n",
        " 'flux_auto_3p6': 'SpIES 3.6 microns flux value (microjansky) automatically extracted using SExtractor',\n",
        " 'fluxerr_auto_3p6': \"Error in 'flux_auto_3p6'\",\n",
        " 'class_star_3p6': 'SpIES 3.6 micrometer morphology classification, > 0.5 for resolved source',\n",
-       " 'flux_aper_2_4p5': 'SpIES 4.5 microns flux (microjansky) extracted using a 1.9 arcsec aperature',\n",
+       " 'flux_aper_2_4p5': 'SpIES 4.5 microns flux (microjansky) extracted using a 1.9 arcsec aperture',\n",
        " 'fluxerr_aper_2_4p5': \"Error in 'flux_aper_2_4p5'\",\n",
        " 'flux_auto_4p5': 'SpIES 4.5 micrometer flux value (microjansky) automatically extracted using SExtractor',\n",
        " 'fluxerr_auto_4p5': \"Error in 'flux_auto_4p5'\",\n",
        " 'class_star_4p5': 'SpIES 4.5 microns morphology classification, > 0.5 for resolved source',\n",
-       " 'src2dd': 'Distance from source to the DeepDrill match (arcsec)'}"
+       " 'src2dd': 'Distance from source to the DeepDrill match (arcsec)',\n",
+       " 'help_id': 'Unique ID of the Herschel Extragalactic Legacy Project (HELP)',\n",
+       " 'src2help': 'Distance from source to the Herschel/HELP match (arcsec)',\n",
+       " 'f_pacs_{wavelength}': 'Herschel PACS flux density (microjansky) at wavelength of 100 mircrons or 160 microns',\n",
+       " 'ferr_spire_{wavelength}_u': 'Flux density (84th percentile), in microjansky, at wavelength of 250 mircrons, 350 mircrons or 500 microns',\n",
+       " 'ferr_spire_{wavelength}_l': 'Flux density (16th percentile), in microjansky, at wavelength of 250 mircrons, 350 mircrons or 500 microns',\n",
+       " 'f_spire_{wavelength}': 'Herschel SPIRE flux density (microjansky) at wavelength of 250 mircrons, 350 mircrons or 500 microns'}"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -194,9 +223,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "AGN DC",
    "language": "python",
-   "name": "python3"
+   "name": "agndc"
   },
   "language_info": {
    "codemirror_mode": {
@@ -208,7 +237,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.9.5"
   }
  },
  "nbformat": 4,
