update doc nbs 01 and 04

--- a/docs/04_LC_features.ipynb
+++ b/docs/04_LC_features.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "This notebook goes over the light curve features computed for the sources that have corresponding time-domain data from SDSS, more specifically, the features that populated the `lcPeriodic` and `lcNonPeriodic` columns. The majority of the features computed are those mentioned in the 'Richards et al. 2011' (**R11**) paper (see [here](https://arxiv.org/abs/1101.1959)). Some additional features computed include best-fit CARMA(1,0)/DRW and CARMA(2,1) parameters obtained using [EzTao](https://github.com/ywx649999311/EzTao) and those introduced by [FATS](http://isadoranun.github.io/tsfeat/FeaturesDocumentation.html). The __R11__ features and FATS features are computed using [$\\texttt{cesium}$](http://cesium-ml.org/)\n",
     "\n",
-    "Next, we will briefly go through those light curves features by the index, starting with the `lcPeriodic` features. __Note__ that a 5 sigma clipping was applied before the following variability metrics were computed because the calibration issue of SDSS light curves as discussed in 'Schmidt et al. 2010' (see [here](https://arxiv.org/abs/1002.2642))."
+    "Next, we will briefly go through those light curves features by the index, starting with the `lcPeriodic` features. __Note__ that a 5 sigma clipping (in magnitude) was applied before the following variability metrics were computed, this descison is mostly driven by the 'spurious dimming' of SDSS light curves as discussed in 'Schmidt et al. 2010' (see [here](https://arxiv.org/abs/1002.2642))."
    ]
   },
   {
@@ -23,7 +23,12 @@
    "metadata": {},
    "source": [
     "- #### 0 - 3\n",
-    "Four best-fit CARMA(2,1)/DHO parameters, $\\alpha_{1}$, $\\alpha_{2}$, $\\beta_{0}$ and $\\beta_{1}$. The fitting was performed in flux.\n",
+    "Four best-fit CARMA(2,1)/DHO parameters, $\\alpha_{1}$, $\\alpha_{2}$, $\\beta_{0}$ and $\\beta_{1}$. \n",
+    "\n",
+    "    - Fitted in flux\n",
+    "    - A 3-point median filter with a 5-sigma clipping was used to remove outliers\n",
+    "    - Fitted g, r and i band light curves only\n",
+    "    - Fitted light curves having more 30 epochs    \n",
     "\n",
     "- #### 4 - 32\n",
     "Generalized Lomb Scargle fit/parameters as described in the __R11__ papaer. The exact matching from index to features is given below. Note that first relative phase ('rel_phase_0') are not included since it is mostly just zero. \n",
@@ -145,7 +150,7 @@
     "    $$\\eta=\\frac{1}{(N-1) \\sigma^{2}} \\sum_{i=1}^{N-1}\\left(m_{i+1}-m_{i}\\right)^{2}$$\n",
     "    \n",
     "- #### 27 - 28\n",
-    "    Best fit CARMA(1,0)/DRW parameters\n",
+    "    Best fit CARMA(1,0)/DRW parameters; __Note__ that light curves with less than 10 epochs were not fitted.\n",
     "    \n",
     "    27: The driving amplitude $\\sigma$, or $\\beta_{0}$ in the CARMA notation. (see 'arXiv: 0903.5315') \\\n",
     "    28: The characteristic timescale described by the DRW model, or $1/\\alpha_{1}$ in the CARMA notation."
