--- a/getting_started/01_ReadTables.ipynb
+++ b/getting_started/01_ReadTables.ipynb
@@ -3141,7 +3141,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2. LC features definitions\n",
+    "#### *__A Note on Column Names__*\n",
+    "Some entries in the LSST data release catalog as descibed by the __LSE_163__ are multi-dimensional; in the provided tables, we have flatten them. For example, the current LSST data model uses a 6x1 array to store `psFlux` for each of the six bands (ugrizy), in the provided `Object` table, we used `psFlux_u` to represent the `psFlux` measurement in the 'u' band. For the `lcPeriodic` and `lcNonPeriodic` columns, we used square brakets ('[ ]') to emphasize the index of the correpsoinding feature. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. Light curvce feature definitions\n",
     "You can get more infomration about how the light curve features are extrated from the notebooks included in the 'docs' folder. To just get a mapping from the index to the corresponding feature, you can read the included 'lc_feats.yml' file as below."
    ]
   },
@@ -3158,7 +3166,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 2.1 LcPeriodic"
+    "#### 2.1 `lcPeriodic`"
    ]
   },
   {
@@ -3217,7 +3225,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 2.2 LcNonPeriodic"
+    "#### 2.2 `lcNonPeriodic`"
    ]
   },
   {
